tests/suite/fail/generated/parser/fail_missing_brace_8.ny
fn main() {
    let x = 8
//~ ERROR Expected '}'
